# luseepy

./: .gitignore  AGENTS.md  CLAUDE.md  CPU_ONLY_SPHERICART_SETUP.txt  HANDOFF.md  LICENSE  README.md  SYNTHESIZED_PLAN.md  claude-receive-plan.md  jaxify_notes.md  jaxsim_dropin_plan.md  luseepy_intro.md  mathematical_description.tex  optax_math_diff.md  pyproject.toml  pyproject.toml.linux_no_cuda  readthedocs.yaml  settings.md  setup_env.sh
attic/: README.md
beam_conversion/: __init__.py  common.py  converter_base.py  cst.py  feko.py  feko_script.sh  hfss.py  hfss_script.sh  make_placeholder_za.py  receive_csv.py  touchstone.py
docker/: Dockerfile  Dockerfile-base  Dockerfile-ci  Dockerfile-foundation  Dockerfile-foundation-deprecated  Dockerfile-jupyter  Dockerfile-pyshtools  Dockerfile-unity-jupyter  Dockerfile-unity-luseepy  Dockerfile-unity-luseepy-legacy  README.md  requirements-foundation.txt  requirements-pyshtools.txt  requirements-unity-luseepy.txt  requirements.txt  requirements_fresh.txt  requirements_updated.txt
docs/: gain_model_conversion.tex  instrument_response.md  mathematical_description.tex  requirements.txt  spectral_fitting.md  wirtinger_cg.md
examples/: benchmark_cg_vs_lbfgs.py  benchmark_full_stokes.py  frequencies_example.py  mapmaker_benchmark.py  maxlike_demo.py  optax_maxlike.py  paper_wiener_filter.py  timing_scaling.py
lusee/: Beam.py  BeamCouplings.py  BeamGauss.py  BeamInterpolator.py  Beam_module.py  Cache.py  CachedBeam.py  CalibratorSimulator.py  CalibratorTrack.py  CalibratorWaveform.py  Covariance.py  CroSimulator.py  Data.py  DefaultSimulator.py  Fitting.py  FullStokesCalibrator.py  FullStokesSimulator.py  GainModel.py  InstrumentResponse.py  JaxSimulator.py  LBeam.py  LBeamCouplings.py  LBeam_Gauss.py  LabeledArray.py  LunarCalendar.py  MapMaker.py  MonoSkyModels.py  NpWrapper.py  NumpySimulator.py  Observation.py  PCA_analyzer.py  PCAanalyzer.py  README.md  RRLAnalysis.py  RRLSim.py  RRLSkyModels.py  ReceiverImpedance.py  Sampler.py  Satellite.py  SeparableSky.py  (+22 more)
notebooks/: GaussianLbeam.ipynb  SNR.ipynb  an_mapmaker_demo.ipynb  cmb_detection.ipynb  grid2healpix_demo.ipynb  mapmaker_demo.ipynb  mapmaker_svd_multifreq_demo.ipynb  rrl_sim_visualize.ipynb  rrl_sim_visualize_staged.ipynb  sampling_demo.ipynb  sat_data_check.ipynb  sat_data_check_csv.ipynb  sat_data_check_hdf5.ipynb  satellite.ipynb  separable_fit_demo.py  separable_fit_recovery.ipynb  short_dipole_analysis.ipynb  sim_result.ipynb  spectral_fit_demo.py  spectral_fit_recovery.ipynb  test_default_cro.ipynb  transits.ipynb
receive/: ccsds_to_hdf5.md  const_storage.py  data.py  dcb_decode.py  fits_writer.py  hdf5.md  hdf5_writer.py  low_level.py  metadata_utils.py  plot_spectra.py  plot_spectra_telemetry.py  plot_tr_spectra.py  plot_zoom_spectra.py  reconstruct_packets.py  reconstruct_packets_from_json.py  replicate_hdf5.py  telemetry_utils.py  test_data.py
simulation/: README.md
tests/: CoordTest.py  JupiterTest.py  LunarCalendarTest.py  RadecTest.py  SatTest.py  SimReadTest.py  SimTest.py  analyze_multifreq_bench.py  bench_2050.py  bench_21cm_injection.py  bench_fullcg_tight.py  bench_multifreq_full_scale.py  bench_noise_seeds.py  bench_sampling.py  bench_singlefreq_allbands.py  bench_svd_ksweep.py  conftest.py  debug_fullcg_10freq.py  diagnose_svd_lowband.py  test_beam.py  test_beam_couplings.py  test_beam_interpolator.py  test_beam_pre_jax_compat.py  test_calendar.py  test_calibrator_sim.py  test_calibrator_track.py  test_coords.py  test_cro_frame.py  test_cro_mcmf_conventions.py  test_cro_vs_default.py  test_crosimulator.py  test_extended_freq_range.py  test_fitting_dense.py  test_four_port_driver.py  test_frequencies_helper.py  test_full_stokes_simulator.py  test_gain_model.py  (+28 more)
(+125 files in other folders)
