[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lusee"
authors = [{name = "Potekhin", email = "potekhin@bnl.gov"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "numpy",
    "scipy>=1.15",
    "matplotlib",
    "astropy",
    "fitsio",
    "pyshtools",
    "healpy",
    "lunarsky",
    "jax",
    "hydra-core>=1.3.2",
    "s2fft>=1.4.0",
    "croissant-sim[jax]>=4.2.1",
    "icecream>=2.1.10",
]
[project.optional-dependencies]
croissant = [
    "croissant-sim >= 4.0.0, <5.0.0",
    "s2fft",
]
