[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lusee"
authors = [{name = "Potekhin", email = "potekhin@bnl.gov"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = "==3.12.*"
dependencies = [
    "numpy",
    "scipy>=1.15",
    "matplotlib",
    "astropy",
    "fitsio",
    "pyshtools",
    "healpy",
    "lunarsky",
    "jax",
    "hydra-core>=1.3.2",
    "s2fft>=1.4.0",
    "croissant-sim==5.1.3",
    "pytest>=9.0.2",
]
[project.optional-dependencies]
croissant = [
    "croissant-sim >= 5.1.3",
    "s2fft",
]
cuda12 = [
    "jax[cuda12]; sys_platform == 'linux'",
]
cuda13 = [
    "jax[cuda13]; sys_platform == 'linux'",
]
# Downlink-ingest pipeline (lusee.ingest). Needs h5py for HDF5 output and
# the externally-developed uncrater package (and its pycoreloop dependency)
# for packet decoding. uncrater is not yet on PyPI; install it separately,
# e.g. `uv pip install -e <path-to-uncrater>` or, once available,
# `uv pip install "uncrater @ git+https://github.com/lusee-night/uncrater"`.
ingest = [
    "h5py",
    "hexdump",
    "icecream",
    "scipy",
]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/attic"]
pythonpath = ["."]
markers = [
    "integration: requires LUSEE_DRIVE_DIR and real data files",
]
