[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "lusee"
authors = [{name = "Potekhin", email = "potekhin@bnl.gov"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = "==3.12.*"
dependencies = [
    "numpy",
    "scipy>=1.15",
    "matplotlib",
    "astropy",
    "fitsio",
    "pyshtools",
    "healpy",
    "lunarsky",
    "spiceypy",
    "jax",
    "hydra-core>=1.3.2",
    "s2fft @ git+https://github.com/slosar/s2fft.git@cefdf468ec2540818bafb37ed60d7b1fbba2f21f",
    "croissant-sim==6.0.0",
    "pytest>=9.0.2",
]
[project.optional-dependencies]
croissant = [
    "croissant-sim == 6.0.0",
    "s2fft @ git+https://github.com/slosar/s2fft.git@cefdf468ec2540818bafb37ed60d7b1fbba2f21f",
    "spiceypy",
]
cuda12 = [
    "jax[cuda12]; sys_platform == 'linux'",
]
cuda13 = [
    "jax[cuda13]; sys_platform == 'linux'",
]
# Downlink-ingest pipeline (lusee.ingest). The packet decoder itself lives
# in the external uncrater project and must be installed separately.
ingest = [
    "h5py",
    "hexdump",
    "icecream",
]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/attic"]
pythonpath = ["."]
markers = [
    "integration: requires LUSEE_DRIVE_DIR and real data files",
    "slow: longer-running regression checks",
    "manual: opt-in end-to-end or artifact-generating checks",
]
